--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PW=password
-DB_NAME=exploredb
-EVALUNIT_TABLE=evalunits
-HLM_TABLE=hlms
-LOT_TABLE=lots
+export DB_HOST=localhost
+export DB_PORT=5432
+export DB_USER=postgres
+export DB_PW=password
+export DB_NAME=exploredb
+export EVALUNIT_TABLE=evalunits
+export HLM_TABLE=hlms
+export LOT_TABLE=lots
+export MAPBOX_TOKEN=pk.eyJ1sgcxxcvxlsNDVyMzQxcvxcxvxcvphRc_MDVtg
+export SECRET_KEY=_5#y2L"F4Qvsdcxvxvxcsivbvdubff/ 
