--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 export DB_HOST=localhost
 export DB_PORT=5432
-export DB_USER=postgres
-export DB_PW=password
-export DB_NAME=exploredb
+export DB_USER=bitdbuser
+export DB_PW=your-password
+export DB_NAME=your-db-name
 export EVALUNIT_TABLE=evalunits
 export HLM_TABLE=hlms
 export LOT_TABLE=lots
-export MAPBOX_TOKEN=pk.eyJ1sgcxxcvxlsNDVyMzQxcvxcxvxcvphRc_MDVtg
-export SECRET_KEY=_5#y2L"F4Qvsdcxvxvxcsivbvdubff/ 
+export MAPBOX_TOKEN=your-mapbox-token
+export SECRET_KEY=used-by-flask
